--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="container header-container">
                 <div class="header__logo-slogan">
                     <div class="header__logo-wrapper">
-                        <a href="./home-page.html">
+                        <a href="./index.html">
                             <div class="header__logo">
                                 <span></span>
                                 <span></span>
